--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,11 +16,14 @@ jobs:
       matrix:
         go-version: [ '1.18' , '1.20', '1.21.x' ]
     steps:
+    - uses: actions/checkout@v4
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.go-version }}
-
+        cache-dependency-path: subdir/go.sum
+    - name: Install dependencies
+      run: go get .
     - name: Build
       run: go build -v ./...
 
